--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <div id="container" class="go">
-        <div id="clock"></div>
+    <div id="container">
+        <div id="clock">
+            <div id="hour" class="clock-item"></div>
+            <div class="sep">:</div>            
+            <div id="min" class="clock-item"></div>
+            <div class="sep">:</div>            
+            <div id="sec" class="clock-item"></div>
+        </div>
         <button id="btn">Click to stop screen from sleeping</button>
     </div>
 </body>
